fixed an alignment error in feature list

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,6 +2,10 @@
   margin-top: -21px;
 }
 
+.feature-list {
+  padding-left: 15px;
+}
+
 .game-collection {
   @extend .row;
   margin-top: 50px;
